Modèle Eloquent - Client
